New files added

--- a/zarf/docker/dockerfile
+++ b/zarf/docker/dockerfile
@@ -1,25 +1,26 @@
 FROM golang:1.19 as build_sales-api
-ENV CGO_ENABLED 0 
-ARG VCS_REF
+ENV CGO_ENABLED 0
 ARG BUIL_REF
 
 #copying code into container
-COPY main.go /service
+COPY . /service
 
 WORKDIR /service
 RUN go build -ldflags "-X main.build=${BUILD_REF}"
 
-FROM alpine
+FROM alpine:3.14
 ARG BUILD_DATE
 ARG BUILD_REF
 # go build takes name service from the context of the folder here
-COPY --from=build_sales-api /service /service 
+COPY --from=build_sales-api /service /service
+# #RUN chown -R root.root service
+# RUN ["chmod","+x","service"]
 WORKDIR /service
-CMD ["./service"]
+CMD ["./ultimate_service"]
 
-LABEL org.opencontainers.image.created="${BUILD_DATE}" \
-      org.opencontainers.image.title="sales-api" \
-      org.opencontainers.image.authors="William Kennedy <bill@ardanlabs.com>" \
-      org.opencontainers.image.source="https://github.com/ardanlabs/service/app/sales-api" \
-      org.opencontainers.image.revision="${BUILD_REF}" \
-      org.opencontainers.image.vendor="Ardan Labs"
+# LABEL org.opencontainers.image.created="${BUILD_DATE}" \
+#       org.opencontainers.image.title="sales-api" \
+#       org.opencontainers.image.authors="William Kennedy <bill@ardanlabs.com>" \
+#       org.opencontainers.image.source="https://github.com/ardanlabs/service/app/sales-api" \
+#       org.opencontainers.image.revision="${BUILD_REF}" \
+#       org.opencontainers.image.vendor="Ardan Labs"
