--- a/zarf/k8s/base/sales-pod/base-sales.yml
+++ b/zarf/k8s/base/sales-pod/base-sales.yml
@@ -1,25 +1,25 @@
 apiVersion: v1
 kind: Namespace
 metadata:
-  name: service-system
+  name: sales-system
 ---
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: service-dep
-  namespace: service-system
+  name: sales-dep
+  namespace: sales-system
 spec:
   selector:
     matchLabels:
-      app: service
+      app: sales
   template:
     metadata:
       labels:
-        app: service
+        app: sales
     spec:
       dnsPolicy: ClusterFirstWithHostNet
       hostNetwork: true
       terminationGracePeriodSeconds: 60
       containers:
-      - name: service-api-pod
-        image: service-amd64:1.0
+      - name: sales-api-pod
+        image: sales-api-image #this is patched by kustomization image info in kind/sales-pod/kustomization.yml
