--- a/zarf/docker/dockerfile.sales-api
+++ b/zarf/docker/dockerfile.sales-api
@@ -11,6 +11,8 @@ RUN go build -ldflags "-X main.build=${BUILD_REF}"
 FROM alpine:3.14
 ARG BUILD_DATE
 ARG BUILD_REF
+COPY --from=build_sales-api /service/zarf/keys/. /service/zarf/keys/.
+
 # go build takes name service from the context of the folder here
 COPY --from=build_sales-api /service/app/services/sales-api/sales-api /service/sales-api
 # #RUN chown -R root.root service
